manifests/deploymentIngress/api-auth-deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: amcartauthapi 
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amcartauthapi
  template:
    metadata:
      labels:
        app: amcartauthapi 
    spec:
      containers:
        - name: amcartauthapi 
          image: amcartapireg.azurecr.io/amcartauthapi
          ports:
          - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
    name: amcartauthapi-service
    namespace: ingress-basic
spec:
    type: ClusterIP
    ports:
    - port: 80 
      targetPort: 8080
    selector:
        app: amcartauthapi
