manifests/deploymentIngress/api-product-deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: amcartproductapi 
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amcartproductapi
  template:
    metadata:
      labels:
        app: amcartproductapi 
    spec:
      containers:
        - name: amcartproductapi 
          image: nagpapirepo.azurecr.io/amcartproductapi
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
    name: amcartproductapi-service
    namespace: ingress-basic
spec:
    type: ClusterIP
    ports:
    - port: 80 
      targetPort: 8080
    selector:
        app: amcartproductapi
