manifests/deploymentIngress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: ingress-basic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "4.188.7.49.nip.io" #amcart-api.centralindia.cloudapp.azure.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: amcartauthapi-service
                port:
                  number: 80
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: amcartproductapi-service
                port:
                  number: 80
